--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,2 @@
-pip install discord.py[voice]
+git+python3 -m pip install -U https://github.com/Rapptz/discord.py/archive/master.zip#egg=discord.py[voice]
+
