--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,1 @@
-git+python3 -m pip install -U https://github.com/Rapptz/discord.py/archive/master.zip#egg=discord.py[voice]
-
+pip install discord.py
